# openseries

./: .condarc  .coverage  .coveragerc  .cursorrules  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .test_durations  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_SETUP.md  LICENSE  LICENSE.md  Makefile  README.md  SECURITY.md  captor_open_api_sdk.py  check_me.ps1  coverage.xml  environment.yaml  frame.py  lint.sh  load_plotly.py  main.py  make.ps1  poetry.toml  pyproject.toml  requirements.txt  series.py  setup.py  sim_price.py  source_me  source_me.ps1  source_to_activate_venv  trial.md
.circleci/: config.yml
.github/: dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/setup_build/: action.yml
.github/actions/setup_deploy/: action.yml
.github/actions/setup_env_OLD/: action.yml
.github/actions/setup_environment/: action.yml
.github/actions/setup_split/: action.yml
.github/workflows/: Multitest.yml  Normietest.yml  Splitbuild.yml  StandardTest.yml  TestsWithSplit.yml  TestsWithSplitOLD.yml  build.yml  check.yml  checks.yml  ci.yml  codeql.yml  coverage.yml  deploy.yml  docs.yml  newgo.yml  olderbuild.yml  pylint.yml  pytest.yml  release-publish.yml  release-tag.yml  release.yml  ruff.yml  setup-python-environment.yml  sourceforge.yml  split_tests.yml  supply-chain.yml  tagrelease.yml  tagtrial.yml  test.yml  testing.yml  unit-test.yml  zizmor.yml
OpenSeries/: README.md  datefixer.py  frame.py  helpfilewriter.py  load_plotly.py  main.py  openseries.json  plotly_layouts.json  series.py  sim_price.py  stoch_processes.py  sweden_holidays.py
OpenSeries/test/: tests.py
conda/: bld.bat  build.bat  build.sh  meta.yaml
coverage_html/: OpenSeries___init___py.html  OpenSeries_captor_open_api_sdk_py.html  OpenSeries_datefixer_py.html  OpenSeries_frame_py.html  OpenSeries_load_plotly_py.html  OpenSeries_risk_py.html  OpenSeries_series_py.html  OpenSeries_sim_price_py.html  OpenSeries_stoch_processes_py.html  OpenSeries_sweden_holidays_py.html  index.html  status.json
docs/: Makefile  README.md  requirements.txt  update_changelog_github.py
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/.doctrees/: environment.pickle  index.doctree
docs/source/: __init__.py  api_consistency.rst  conf.py  index.rst
docs/source/api/: datefixer.rst  frame.rst  openseries.rst  portfoliotools.rst  report.rst  series.rst  simulation.rst  types.rst
docs/source/development/: changelog.rst  contributing.rst
docs/source/examples/: custom_reports.rst  multi_asset.rst  portfolio_optimization.rst  rebalanced_portfolio.rst  single_asset.rst
docs/source/tutorials/: advanced_features.rst  basic_analysis.rst  portfolio_analysis.rst  risk_management.rst
docs/source/user_guide/: core_concepts.rst  data_handling.rst  installation.rst  quickstart.rst
openseries/: .gitignore  __init__.py  _common_model.py  _risk.py  captor_open_api_sdk.py  common.py  common_calc.py  common_model.py  common_props.py  common_tools.py  datefixer.py  exceptions.py  frame.py  frenkla_open_api_sdk.py  helpfilewriter.py  html_utils.py  load_plotly.py  main.py  meta.yaml  openseries.json  owntypes.py  plotly_captor_logo.json  plotly_layouts.json  portfoliotools.py  report.py  risk.py  series.py  sim_price.py  simulation.py  stoch_processes.py  sweden_holidays.py  types.py
scripts/: run-zizmor.sh
src/: datefixer.py  frame.py  frenkla_open_api_sdk.py  load_plotly.py  plotly_captor_logo.json  risk.py  series.py  sim_price.py
test/: tests.py
tests/: __init__.py  common_sim.py  conftest.py  inheritance.py  key_value_table_with_relative.json  review_plots.py  series.json  simulate.py  test_captor_open_api_sdk.py  test_common_model.py  test_common_model_internals.py  test_common_sim.py  test_commonmodel.py  test_datefixer.py  test_default.py  test_frame.py  test_frenkla_open_api_sdk.py  test_openseries.py  test_package.py  test_portfoliotools.py  test_report.py  test_series.py  test_sim_price.py  test_simulation.py  test_stoch_processes.py  test_types.py  tests.py
