[project]
name = "openseries"
version = "1.9.4"
description = "Tools for analyzing financial timeseries."
authors = [
    { name = "Martin Karrin", email = "martin.karrin@captor.se" },
]
maintainers = [
    { name = "Martin Karrin", email = "martin.karrin@captor.se" },
]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.10,<3.14"

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Framework :: Pydantic",
]

keywords = [
    "python",
    "finance",
    "fintech",
    "data-science",
    "timeseries",
    "timeseries-data",
    "timeseries-analysis",
    "investment",
    "investment-analysis",
    "investing"
]

dependencies = [
    "exchange-calendars (>=4.8,<6.0)",
    "holidays (>=0.30,<1.0)",
    "numpy (>=1.23.2,!=2.3.0,<3.0.0)",
    "openpyxl (>=3.1.2,<5.0.0)",
    "pandas (>=2.1.2,<3.0.0)",
    "plotly (>=5.18.0,<7.0.0)",
    "pydantic (>=2.5.2,<3.0.0)",
    "python-dateutil (>=2.8.2,<4.0.0)",
    "requests (>=2.20.0,<3.0.0)",
    "scipy (>=1.11.4,<2.0.0)",
    "scikit-learn (>=1.4.0,<2.0.0)"
]

[project.urls]
"Homepage" = "https://github.com/CaptorAB/openseries"
"Source" = "https://github.com/CaptorAB/openseries"
"Issue Tracker" = "https://github.com/CaptorAB/openseries/issues"
"Release Notes" = "https://github.com/CaptorAB/openseries/releases"

[tool.poetry.group.dev.dependencies]
black = ">=24.4.2,<27.0.0"
mypy = "1.17.1"
pandas-stubs = ">=2.1.2,<3.0.0"
pre-commit = ">=3.7.1,<6.0.0"
pytest = ">=8.2.2,<9.0.0"
pytest-cov = ">=5.0.0,<7.0.0"
pytest-xdist = ">=3.3.1,<5.0.0"
ruff = "0.12.10"
types-openpyxl = ">=3.1.2,<5.0.0"
types-python-dateutil = ">=2.8.2,<4.0.0"
types-requests = ">=2.20.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = ["src"]
exclude = ["venv/*"]
cache_dir = ".mypy_cache"
follow_imports = "skip"
strict = true
pretty = true
cache_fine_grained = true
incremental = true
ignore_missing_imports = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.black]
line-length = 87

[tool.ruff]
target-version = "py310"
line-length = 87

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]
fixable = ["ALL"]
mccabe = { max-complexity = 18 }
pydocstyle = { convention = "google" }
pylint = { max-args = 19, max-branches = 24, max-statements = 128 }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:holidays.*"
]
addopts = [
  "-n", "auto",
  "--dist=loadscope",
  "--cov=openseries",
  "--cov-fail-under=99",
  "--cov-branch",
  "--cov-report=term",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--junitxml=junit.xml"
]
